<resources>
    <string name="n">WorkoutLog</string>
    <string name="welcome">Welcome to</string>
    <string name="v">Еще не зарегистрирован?</string>
    <string name="sing_in">Войти</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="name2">Дата регистрации</string>
    <string name="name">Ф.И.О.</string>
    <string name="login">Эл. почта</string>
    <string name="pas">Пароль</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_attendance">Посещение</string>
    <string name="title_personal_account">Профиль</string>
    <string name="v_sport">ВИД СПОРТА:</string>
    <string name="term">СРОК:</string>
    <string name="price">ЦЕНА:</string>
    <string name="group">ГРУППА:</string>
    <string name="sch">ПОСЕЩЕНИЕ:</string>
    <string name="groups">Группа</string>
    <string name="input_group">Группа</string>
    <string name="approval">Согласие на обработку данных</string>
    <string name="iAmAtrainer">Тренер</string>
    <string name="Date_1">1 Занятие</string>
    <string name="teacher_reg">Зарегистрироваться как тренер</string>
</resources>