<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrActivity">


    <ImageView
        android:id="@+id/img_welcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="22dp"
        android:src="@drawable/img_reg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/img_welcom"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="-3dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="42dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input"
            android:ellipsize="start"
            android:gravity="left"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/input_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="42dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input"
            android:ellipsize="start"
            android:gravity="left"
            android:hint="@string/name2"
            android:inputType="text"
            android:padding="10dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="42dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input"
            android:ellipsize="start"
            android:gravity="left"
            android:hint="@string/login"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/input_pas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="42dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input"
            android:ellipsize="start"
            android:gravity="left"
            android:hint="@string/pas"
            android:inputType="text"
            android:padding="10dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="8dp"
            android:shadowColor="@color/black"
            android:text="@string/reg"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/btn"
            app:cornerRadius="20dp" />

    </LinearLayout>

</RelativeLayout>