<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_per_acc"
    tools:context=".ScheduleActivity">

    <ImageView
        android:id="@+id/img_ava"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="520dp"
        android:paddingTop="80dp"
        android:src="@drawable/img_ava"
        app:layout_constraintEnd_toStartOf="@+id/text_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

// этот текст должен изменяться
    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/img_ava"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_ava"
        />

    <TextView
        android:id="@+id/text_v_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="@color/gray"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/v_sport"
        android:textColor="@color/text_reg"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name" />
    <TextView
        android:id="@+id/text_sch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="@color/gray"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/sch"
        android:textColor="@color/text_reg"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_v_sport"
        />

    <TextView
        android:id="@+id/text_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="@color/gray"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/group"
        android:textColor="@color/text_reg"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_sch"
        />

    <TextView
        android:id="@+id/text_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="@color/gray"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/term"
        android:textColor="@color/text_reg"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_group"
        />
    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="@color/gray"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/price"
        android:textColor="@color/text_reg"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_term"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/nav_menu"
        app:itemIconTint="@drawable/btn_nav_selector"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/btn_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>